--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,9 +4,9 @@ persistence=xml
 # configuration pour le mode bdd
 # url, exemple : jdbc:postgresql://localhost/test
 bdd.url=jdbc:postgresql://localhost/ckonsoru
-bdd.login=postgres
-bdd.mdp=perenoel
+bdd.login=ckonsoru
+bdd.mdp=mdpckonsoru
 
 # configuration pour le mode XML
 # nom des fichiers de sauvegarde
-xml.fichier=ckonsoru.xml
+xml.fichier=src/main/resources/datas.xml
