--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,11 @@
       </plugin>
     </plugins>
   </build>
+    <dependencies>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.20</version>
+      </dependency>
+    </dependencies>
 </project>
