ckonsoru 2 init + deux premières fonctionnalités

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,4 +9,4 @@ bdd.mdp=mdpckonsoru
 
 # configuration pour le mode XML
 # nom des fichiers de sauvegarde
-xml.fichier=src/main/resources/datas.xml
+xml.fichier=ckonsoru.xml
