--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,8 +4,8 @@ persistence=bdd
 # configuration pour le mode bdd
 # url, exemple : jdbc:postgresql://localhost/test
 bdd.url=jdbc:postgresql://localhost/ckonsoru
-bdd.login=ckonsoru
-bdd.mdp=mdpckonsoru
+bdd.login=postrges
+bdd.mdp=perenoel
 
 # configuration pour le mode XML
 # nom des fichiers de sauvegarde
